[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vllm-example-project" # 필요하다면 이 프로젝트 이름을 수정하세요.
version = "0.1.0"
description = "A project using the vLLM submodule." # 필요하다면 설명을 수정하세요.
requires-python = ">=3.9" # vLLM의 요구사항에 맞춰 설정 (vLLM pyproject.toml 참조)
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

dependencies = [
    # 필요한 다른 루트 프로젝트의 의존성들을 여기에 추가하세요.
    "vllm @ file:./submodules/vllm"
]

# 만약 vllm을 개발 또는 선택적 의존성으로 관리하고 싶다면,
# dependencies 대신 아래와 같이 사용할 수 있습니다.
# [project.optional-dependencies]
# dev = [
#     "vllm @ file:./submodules/vllm"
# ]

#[tool.setuptools.packages.find]
# 만약 루트 프로젝트 자체에 파이썬 코드가 있다면 주석 해제하고 설정하세요.
# where = ["src"] # 소스 코드가 src 디렉토리에 있다고 가정 